[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Levels/level_01.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/SceneManager/SceneManager.gd" type="Script" id=2]
[ext_resource path="res://shaders/transition.shader" type="Shader" id=3]
[ext_resource path="res://src/MusicPlayer/MusicPlayer.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:material:shader_param/position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1.5 ]
}

[sub_resource type="Animation" id=1]
resource_name = "transition_in"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:material:shader_param/position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, -1.5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "transition_out"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:material:shader_param/position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -1.5, 1.0 ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/in_color = Color( 0, 0, 0, 1 )
shader_param/out_color = Color( 0, 0, 0, 1 )
shader_param/in_out = 0.0
shader_param/position = -1.5
shader_param/size = Vector2( 8, 8 )

[node name="SceneManager" type="Node"]
script = ExtResource( 2 )

[node name="CurrentScene" type="Node" parent="."]

[node name="Level" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="Transition" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
anims/RESET = SubResource( 4 )
anims/transition_in = SubResource( 1 )
anims/transition_out = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="Transition"]

[node name="ColorRect" type="ColorRect" parent="Transition/CanvasLayer"]
material = SubResource( 3 )
margin_right = 640.0
margin_bottom = 360.0

[node name="MusicPlayer" parent="." instance=ExtResource( 5 )]

[connection signal="transitioned" from="." to="." method="_on_SceneManager_transitioned"]
[connection signal="animation_finished" from="Transition/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
